src/test/deca/syntax/invalid/SansObjet/ElseFaute.deca
//Description
//  test de faute dans else
//
//Réponse
//  Erreur syntaxique ligne 8
//  no viable alternative at input '{'

{
    if(true) {
        println(5);
    }
    ele {
        println(6);
    }
}